--- a/client/src/app/components/header/header.component.css
+++ b/client/src/app/components/header/header.component.css
@@ -6,6 +6,8 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
+
+  overflow-x: clip;
 }
 
 .sticky{
